--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,15 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Create output directory
+        run: mkdir -p dist
+
       - name: Generate Snake Game
         uses: Platane/snk@v2
+        
         with:
-          # GitHub user name to use
-          # Use the same username as your GitHub account
-          github_user_name: Wasim-Rana
-
-          # Output file
-          output: dist/github-contribution-grid-snake.svg
+            github_user_name: Wasim-Rana
+            output: dist/github-contribution-grid-snake.svg
+        env:
+          ACTIONS_STEP_DEBUG: true
 
       - name: Upload Snake Game
         uses: actions/upload-artifact@v3
